# Analysis-of-Linguistic-Features-in-Online-Job-Advertisements

./: .gitignore  README.md  check_uniqueness.py  clean_errors.py  duplicates_report.csv  gumtree_jobs.csv  gumtree_scraper.py  jobs.csv  jobs.csv.backup_20251011_175401  pyproject.toml  requirements.txt  simple_scraper.py
