[project]
name = "olx-scraper"
version = "0.1.0"
description = "OLX job listings scraper using Playwright"
authors = [
    {name = "Jakub Czyz"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
