[project]
name = "simple-scraper"
version = "0.1.0"
description = "Analysis of Linguistic Features in Online Job Advertisements"
authors = [
    {name = "Jakub Czyz"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "playwright>=1.55.0,<2.0.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "lxml>=4.9.0",
    "tabulate>=0.9.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"
isort = "^6.1.0"
mypy = "^1.18.2"

